feat: add personal owner sessions
